# ryoiki

./: .gitignore  Cargo.toml  LICENSE  README.md  build-and-run.ps1  build.rs  package.json  tools.config.json
.github/workflows/: rust-ci.yml
apps/web/: .gitignore  .prettierignore  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.svelte  app.css  main.ts  setupTests.ts  vite-env.d.ts
apps/web/src/components/: Controls.svelte  FileUpload.svelte  Legend.svelte  MetricsOverlay.svelte  Toolbar.svelte  Tooltip.svelte
apps/web/src/components/__tests__/: Controls.test.ts  Legend.test.ts  MetricsOverlay.test.ts
apps/web/src/composables/: useTheme.ts
apps/web/src/lib/: anim.ts  draggable.ts  metrics.ts  overlayStore.ts  stores.ts  utils.ts  wasm-bridge.ts  wasm-loader.ts  wasm.ts
apps/web/src/lib/__tests__/: draggable.test.ts  stores.test.ts
apps/web/src/lib/three/: scene.ts
apps/web/src/workers/: analyzer.worker.ts
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
src/: main.rs  metrics_calc.rs  scan.rs
tests/: cc_json_path.rs
